<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/menuRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/switch_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_light_mode_24"
        android:contentDescription="@string/light_mode"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/menu_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SwitchStyle"/>

</LinearLayout>